kind/manifests/locust-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: locust-giropops
  namespace: giropops-senhas
spec:
  selector:
    app: locust-giropops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8089
  type: ClusterIP
