kind/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: giropops-senhas
  name: giropops-svc
  namespace: giropops-senhas
spec:
  selector:
    app: giropops-senhas
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: tcp-app
  type: ClusterIP
